--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "yireo/magento2-additional-language-file",
   "license": "OSL-3.0",
   "type": "magento2-module",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "",
   "description": "",
   "keywords":[ "composer-installer", "magento"],
@@ -13,8 +13,8 @@
     }
   ],
   "require": {
-    "magento/framework": "100.*",
-    "php": ">=5.6.0"
+    "magento/framework": "^100.0|^101.0|^102.0",
+    "php": ">=7.0.0"
   },
   "require-dev":{
     "phpunit/phpunit":"*",
