--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   ],
   "require": {
-    "magento/framework": "^100.0|^101.0|^102.0",
+    "magento/framework": "^100.0|^101.0|^102.0|^103.0",
     "php": ">=7.0.0"
   },
   "require-dev":{
